--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,9 @@
-  <aside class="bg-dark">
-      <div class="container text-center">
-          <div class="call-to-action">
-              <h2>Free Download at Start Bootstrap!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-          </div>
-      </div>
-  </aside>
+<aside class="bg-primary">
+<!-- <aside class="bg-dark"> -->
+   <div class="container text-center">
+       <div class="call-to-action">
+           <h2>La sécurité est une exigence commerciale</h2>
+           <a href="#contact" class="btn btn-default btn-xl wow tada page-scroll">Contactez-Nous</a>
+       </div>
+   </div>
+</aside>
