--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>Protégez vos données et votre entreprise</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>De plus en plus, notre monde dépend des données. Ces données, parfois cruciales, souvent confidentielles, sont devenues un actif de haute importance pour les entreprises.</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">En savoir plus</a>
         </div>
     </div>
 </header>
