--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,8 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">Notre Mission</h2>
                 <hr class="primary">
+                <p class="text-muted">Contribuer l'expertise dont vous avez besoin pour protéger votre entreprise.</p>
             </div>
         </div>
     </div>
@@ -11,30 +12,30 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <i class="fa fa-4x fa-search-plus wow bounceIn text-primary"></i>
+                    <h3>Évaluer le risque</h3>
+                    <p class="text-muted">Posez les bases de votre programme de gestion des risques.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-lock wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Protéger vos actifs</h3>
+                    <p class="text-muted">S’assurer que les mesures soient en place pour sécuriser vos données.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <i class="fa fa-4x fa-user wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Former vos employés</h3>
+                    <p class="text-muted">Former votre personnel à identifier les risques.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <i class="fa fa-4x fa-server wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Assurer la continuité</h3>
+                    <p class="text-muted">Développez des procédures pour atténuer les incidents potentiels.</p>
                 </div>
             </div>
         </div>
