--- a/css/main.scss
+++ b/css/main.scss
@@ -33,8 +33,8 @@
 //     }
 // }
 
-// variables.less
-$theme-primary: #F05F40;
+// variables.less original $theme-primary: #F05F40;
+$theme-primary: #6C819E;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
