--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -7,7 +7,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Allianz en partenariat avec Air France
+                                Allianz en partenariat avec Air&nbsp;France
                             </div>
                             <div class="project-name">
                                 Assistance à la maîtrise d’ouvrage (AMOA) sur le projet du coffre-fort virtuel Allianz-Protect.
@@ -25,7 +25,7 @@
                                 Commission Européenne - Contrôle Financier
                             </div>
                             <div class="project-name">
-                                Mise a jour du système de gestion des audits financiers du DG XX vers l'échantillonnage par unité monétaire (MUS) et analyze des risques.
+                                Mise à jour du système de gestion des audits financiers vers l'échantillonnage par unité monétaire (MUS) et analyse des risques.
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
                                 Voyages-sncf.com
                             </div>
                             <div class="project-name">
-                                Assurance de conformité CNIL des bases de données clients et usagers disponibles aux équipes marketing.
+                                Assurance de la conformité aux normes CNIL des bases de données clients et usagers disponibles aux équipes marketing.
                             </div>
                         </div>
                     </div>
