--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-search-plus wow bounceIn text-primary"></i>
                     <h3>Évaluer le risque</h3>
-                    <p class="text-muted">Posez les bases de votre programme de gestion des risques.</p>
+                    <p class="text-muted">Poser les bases de votre programme de gestion des risques.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -35,7 +35,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-server wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Assurer la continuité</h3>
-                    <p class="text-muted">Développez des procédures pour atténuer les incidents potentiels.</p>
+                    <p class="text-muted">Développer des procédures pour atténuer les incidents potentiels.</p>
                 </div>
             </div>
         </div>
