--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="{{ site.author }}">
     <title>dario • Sécurité et Vie Privée</title>
-    <link rel="apple-touch-icon" href="{{ site.chklst.logo }}"/>
+    <link rel="apple-touch-icon" href="{{ site.url }}/img/chklst.png"/>
     <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.url }}/favicon.ico"/>
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="{{ site.url }}/favicon.ico">
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
