--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="{{ site.author }}">
-    <title>dario • Sécurité et Vie Privée</title>
+    <title>dario • Sécurité • Vie Privée</title>
     <link rel="apple-touch-icon" href="{{ site.url }}/img/chklst.png"/>
     <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.url }}/favicon.ico"/>
     <link rel="icon" href="{{ site.url }}/favicon.ico">
@@ -31,15 +31,15 @@
     <meta name="twitter:card" content="summary" />
     <!-- <meta name="twitter:card" content="summary_large_image"> -->
     <meta name="twitter:site" content="@darioS3C">
-    <meta name="twitter:title" content="dario.com • Sécurité et Vie Privée">
+    <meta name="twitter:title" content="dario.com • Sécurité • Vie Privée">
     <meta name="twitter:description" content="Comprendre - Agir. La sécurité est une exigence commerciale. La protection de la vie privée est un avantage concurrentiel.">
     <meta name="twitter:creator" content="dario">
     <!-- Twitter summary card with large image must be at least 280x150px -->
     <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}{{ site.chklst.logo }}"/>
     <!-- Open Graph data -->
-    <meta property="og:title" content="dario.com • Security and Privacy"/>
+    <meta property="og:title" content="dario.com • Sécurité • Vie Privée"/>
     <meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
     <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}{{ site.chklst.logo }}"/>
     <meta property="og:description" content="Comprendre - Agir. La sécurité est une exigence commerciale. La protection de la vie privée est un avantage concurrentiel."/>
-    <meta property="og:site_name" content="dario.com • Sécurité et Vie Privée/>
+    <meta property="og:site_name" content="dario.com • Sécurité • Vie Privée"/>
 </head>
