--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,18 +28,18 @@
     <![endif]-->
     <meta name="robots" content="index, follow">
     <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary">
     <!-- <meta name="twitter:card" content="summary_large_image"> -->
     <meta name="twitter:site" content="@darioS3C">
     <meta name="twitter:title" content="dario.com • Sécurité • Vie Privée">
     <meta name="twitter:description" content="Comprendre - Agir. La sécurité est une exigence commerciale. La protection de la vie privée est un avantage concurrentiel.">
     <meta name="twitter:creator" content="dario">
     <!-- Twitter summary card with large image must be at least 280x150px -->
-    <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}{{ site.chklst.logo }}"/>
+    <meta name="twitter:image" content="{{ site.url }}/img/chklst.png">
     <!-- Open Graph data -->
     <meta property="og:title" content="dario.com • Sécurité • Vie Privée"/>
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
-    <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}{{ site.chklst.logo }}"/>
+    <meta property="og:url" content="{{ site.url }}"/>
+    <meta property="og:image" content="{{ site.url }}/img/chklst.png"/>
     <meta property="og:description" content="Comprendre - Agir. La sécurité est une exigence commerciale. La protection de la vie privée est un avantage concurrentiel."/>
     <meta property="og:site_name" content="dario.com • Sécurité • Vie Privée"/>
 </head>
