--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,28 +6,25 @@
                 <hr class="primary">
                 <p>Appelez-nous ou envoyez-nous un courriel et entreprenons ensemble la sécurisation de votre entreprise.</p>
             </div>
-
         <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="tel:{{site.telephone_number}}">
                 <i class="fa fa-phone fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>Appelez-nous</p>
             </a>
         </div>
-
         <div class="col-lg-2 col-lg-offset-1 text-center">
             <a href="mailto:{{ site.email }}">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <!-- <p>{{ site.email }}</p> -->
                 <p>Courriel</p>
             </a>
         </div>
-
         <div class="col-lg-2 col-lg-offset-1 text-center">
             <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
-            <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.twitter_username }}</p>
             </a>
         </div>
-
+      </div>
     </div>
 </section>
