--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,8 +2,8 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="img/allianz_protect.pdf" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <a href="img/portfolio/allianz-protect.pdf" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/Allianz-Protect.jpg" class="img-responsive" alt="Coffre-fort virtuel Allianz Protect">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -18,7 +18,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="http://europa.eu/rapid/press-release_IP-96-993_fr.htm" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/EC.jpg" class="img-responsive" alt="Commission Européenne - Contrôle Financier">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -32,8 +32,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/3.jpg" onClick="return false;" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                <a href="img/portfolio/BNP-Paribas.jpg" onClick="return false;" class="portfolio-box">
+                    <img src="img/portfolio/BNP-Paribas.jpg" class="img-responsive" alt="Paribas">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -48,7 +48,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/Voyages-sncf.jpg" class="img-responsive" alt="Voyages-sncf">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -62,8 +62,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a a href="img/portfolio/5.jpg" onClick="return false;" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                <a a href="img/portfolio/rpr.jpg" onClick="return false;" class="portfolio-box">
+                    <img src="img/portfolio/rpr.jpg" class="img-responsive" alt="Rhône-Poulenc Rorer">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -78,7 +78,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/EDF.jpg" class="img-responsive" alt="EDF">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
