--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -62,7 +62,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a a href="img/portfolio/rpr.jpg" onClick="return false;" class="portfolio-box">
+                <a href="img/portfolio/rpr.jpg" onClick="return false;" class="portfolio-box">
                     <img src="img/portfolio/rpr.jpg" class="img-responsive" alt="Rhône-Poulenc Rorer">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
