--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,42 +4,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="{{ site.author }}">
+
     <title>dario • Sécurité • Vie Privée</title>
-    <link rel="apple-touch-icon" href="{{ site.url }}/img/chklst.png"/>
-    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.url }}/favicon.ico"/>
+
+    <link rel="apple-touch-icon" href="{{ site.url }}/img/chklst.png">
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.url }}/favicon.ico">
     <link rel="icon" href="{{ site.url }}/favicon.ico">
-    <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+
     <!-- Custom Fonts
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     -->
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
     <meta name="robots" content="index, follow">
-    <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary">
-    <!-- <meta name="twitter:card" content="summary_large_image"> -->
-    <meta name="twitter:site" content="@darioS3C">
-    <meta name="twitter:title" content="dario.com • Sécurité • Vie Privée">
-    <meta name="twitter:description" content="Comprendre - Agir. La sécurité est une exigence commerciale. La protection de la vie privée est un avantage concurrentiel.">
-    <meta name="twitter:creator" content="dario">
-    <!-- Twitter summary card with large image must be at least 280x150px -->
-    <meta name="twitter:image" content="{{ site.url }}/img/chklst.png">
-    <!-- Open Graph data -->
-    <meta property="og:title" content="dario.com • Sécurité • Vie Privée"/>
-    <meta property="og:url" content="{{ site.url }}"/>
-    <meta property="og:image" content="{{ site.url }}/img/chklst.png"/>
-    <meta property="og:description" content="Comprendre - Agir. La sécurité est une exigence commerciale. La protection de la vie privée est un avantage concurrentiel."/>
-    <meta property="og:site_name" content="dario.com • Sécurité • Vie Privée"/>
 </head>
