--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,14 +3,14 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="img/portfolio/allianz-protect.pdf" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/Allianz-Protect.jpg" class="img-responsive" alt="Coffre-fort virtuel Allianz Protect">
+                    <img src="img/portfolio/Allianz-Protect.jpg" class="img-responsive" alt="Coffre-fort sécurisé Allianz Protect">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Allianz en partenariat avec Air&nbsp;France
                             </div>
                             <div class="project-name">
-                                Assistance à la maîtrise d’ouvrage (AMOA) sur le projet du coffre-fort virtuel Allianz-Protect.
+                                Assistance à la maîtrise d’ouvrage (AMOA) sur le projet du coffre-fort numérique Allianz Protect.
                             </div>
                         </div>
                     </div>
@@ -18,7 +18,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="http://europa.eu/rapid/press-release_IP-96-993_fr.htm" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/EC.jpg" class="img-responsive" alt="Commission Européenne - Contrôle Financier">
+                    <img src="img/portfolio/EC.jpg" class="img-responsive" alt="Commission Européenne | Audit et analyse des risques">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -33,7 +33,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="img/portfolio/BNP-Paribas.jpg" onClick="return false;" class="portfolio-box">
-                    <img src="img/portfolio/BNP-Paribas.jpg" class="img-responsive" alt="Paribas">
+                    <img src="img/portfolio/BNP-Paribas.jpg" class="img-responsive" alt="Paribas | Plan de reprise après sinistre et de continuité">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -48,7 +48,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/Voyages-sncf.jpg" class="img-responsive" alt="Voyages-sncf">
+                    <img src="img/portfolio/Voyages-sncf.jpg" class="img-responsive" alt="Voyages-sncf | CNIL">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -63,7 +63,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="img/portfolio/rpr.jpg" onClick="return false;" class="portfolio-box">
-                    <img src="img/portfolio/rpr.jpg" class="img-responsive" alt="Rhône-Poulenc Rorer">
+                    <img src="img/portfolio/rpr.jpg" class="img-responsive" alt="Rhône-Poulenc Rorer | Audit de sécurité">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -78,7 +78,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/EDF.jpg" class="img-responsive" alt="EDF">
+                    <img src="img/portfolio/EDF.jpg" class="img-responsive" alt="EDF | CNIL">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
