--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Les entreprises de toutes tailles peuvent être la cible de cyber&#8209attaques</h2>
+                <h2 class="section-heading">Les entreprises de toutes tailles peuvent être la cible de cyber&#8209;attaques</h2>
                 <hr class="light">
                 <p class="text-faded">L'omniprésence des cyber-attaques est alimentée par le rythme de croissance effréné de l'innovation et du changement. L’augmentation de risque causée par la fraude et l'insécurité en ligne peut être atténuée.</p>
                 <!--<a href="#contact" class="btn btn-default btn-xl">Contact</a>-->
