--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -182,7 +182,7 @@ header {
             }
             p {
                 font-weight: 300;
-                color: rgba(white, .7);
+                color: rgba(white, 1);
                 font-size: 16px;
                 margin-bottom: 50px;
             }
@@ -321,6 +321,14 @@ header {
 
 .btn-xl {
     padding: 15px 30px;
+    color: #fff;
+    background-color: rgba(0,0,0,0.1);
+.btn-xl:hover,
+.btn-xl:focus,
+.btn-xl:active {
+    color: #fff;
+    background-color: rgba(0,0,0,0.7);
+  }
 }
 
 // Contact
