--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -37,7 +37,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Banque Paribas – BNP Paribas
+                                Banque Paribas
                             </div>
                             <div class="project-name">
                                 Mise en oeuvre des sites de secours dans le cadre du nouveau plan de continuité informatique.
