--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <h1>Protégez vos données et votre entreprise</h1>
             <hr>
             <p>De plus en plus, notre monde dépend des données. Ces données, parfois cruciales, souvent confidentielles, sont devenues un actif de haute importance pour les entreprises.</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">En savoir plus</a>
+            <a href="#intro" class="btn btn-primary btn-xl page-scroll">En savoir plus</a>
         </div>
     </div>
 </header>
