--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,8 +2,8 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/allianz-protect.pdf" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/Allianz-Protect.jpg" class="img-responsive" alt="Coffre-fort sécurisé Allianz Protect">
+                <a href="img/portfolio/allianz-protect.pdf" rel="nofollow" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/Allianz-Protect.jpg" class="img-responsive" alt="AMOA sécurité et vie privée Coffre-fort Allianz Protect">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -17,8 +17,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="http://europa.eu/rapid/press-release_IP-96-993_fr.htm" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/EC.jpg" class="img-responsive" alt="Commission Européenne | Audit et analyse des risques">
+                <a href="http://europa.eu/rapid/press-release_IP-96-993_fr.htm" rel="nofollow" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/EC.jpg" class="img-responsive" alt="Audit et analyse des risques et sécurité">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -32,8 +32,8 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/BNP-Paribas.jpg" onClick="return false;" class="portfolio-box">
-                    <img src="img/portfolio/BNP-Paribas.jpg" class="img-responsive" alt="Paribas | Plan de reprise après sinistre et de continuité">
+                <a href="img/portfolio/BNP-Paribas.jpg" onClick="return false;" rel="nofollow" class="portfolio-box">
+                    <img src="img/portfolio/BNP-Paribas.jpg" class="img-responsive" alt="Paribas plan de reprise après sinistre et de continuité">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -47,23 +47,23 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/Voyages-sncf.jpg" class="img-responsive" alt="Voyages-sncf | CNIL">
+                <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" rel="nofollow" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/Voyages-sncf.jpg" class="img-responsive" alt="AMOA Conformité CNIL sécurité et vie privée">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 Voyages-sncf.com
                             </div>
                             <div class="project-name">
-                                Assurance de la conformité aux normes CNIL des bases de données clients et usagers disponibles aux équipes marketing.
+                                AMOA sur projet de conformité aux normes CNIL des bases de données clients et usagers disponibles aux équipes marketing.
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/rpr.jpg" onClick="return false;" class="portfolio-box">
-                    <img src="img/portfolio/rpr.jpg" class="img-responsive" alt="Rhône-Poulenc Rorer | Audit de sécurité">
+                <a href="img/portfolio/rpr.jpg" onClick="return false;" rel="nofollow" class="portfolio-box">
+                    <img src="img/portfolio/rpr.jpg" class="img-responsive" alt="Audit de sécurité et vie privée des études cliniques">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
@@ -77,15 +77,15 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" target="_blank" class="portfolio-box">
-                    <img src="img/portfolio/EDF.jpg" class="img-responsive" alt="EDF | CNIL">
+                <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" rel="nofollow" target="_blank" class="portfolio-box">
+                    <img src="img/portfolio/EDF.jpg" class="img-responsive" alt="AMOA Conformité CNIL sécurité et vie privée">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
                                 EDF - Marketing
                             </div>
                             <div class="project-name">
-                                Assistance à la mise en place et maintenance des bases de données clients conformes aux règlementations de la CNIL.
+                                Assistance à la maîtrise d’ouvrage (AMOA) a l’implantation des bases de données clients conformes aux règlementations de la CNIL.
                             </div>
                         </div>
                     </div>
