--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Les entreprises de toutes tailles peuvent être la cible de cyber&#8209;attaques</h2>
+                <h2 class="section-heading">La sécurité est une exigence commerciale</h2>
                 <hr class="light">
-                <p class="text-faded">L'omniprésence des cyber-attaques est alimentée par le rythme de croissance effréné de l'innovation et du changement. L’augmentation de risque causée par la fraude et l'insécurité en ligne peut être atténuée.</p>
-                <!--<a href="#contact" class="btn btn-default btn-xl">Contact</a>-->
+                <p class="text-faded">Nous réduisons vos risques pour la sécurité et la confidentialité des informations, vous assurant que vos données vitales sont protégées.</p>
+                <a href="#contact" class="btn btn-default btn-xl wow tada page-scroll">Contactez-Nous</a>
             </div>
         </div>
     </div>
