--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,32 +4,30 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Agissez dès à présent!</h2>
                 <hr class="primary">
-                <p>Appelez-nous ou envoyez-nous un courriel et entreprenons ensemble la sécurisation de votre entreprise.</p>
+                <p>Envoyez-nous un courriel et entreprenons ensemble la sécurisation de votre entreprise.</p>
             </div>
             <!--
-              <div class="col-lg-2 col-lg-offset-2 text-center">
-                  <a href="tel:{{site.telephone_number}}">
-                      <i class="fa fa-phone fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                      <p>Call</p>
-                  </a>
-              </div>
-              -->
-              <div class="col-lg-2 col-lg-offset-5 text-center">
-                  <a href="mailto:{{ site.email }}">
-                      <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                      <!-- <p>{{ site.email }}</p> -->
-                      <p>Courriel</p>
-                  </a>
-              </div>
-              <!--
-              <div class="col-lg-2 col-lg-offset-1 text-center">
-                  <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
-                     <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                      <p>{{ site.twitter_username }}</p>
-                  </a>
-              </div>
-              -->
-      </div>
+            <div class="col-lg-2 col-lg-offset-2 text-center">
+                <a href="tel:{{site.telephone_number}}">
+                    <i class="fa fa-phone fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p>Call</p>
+                </a>
+            </div>
+            -->
+            <div class="col-lg-2 col-lg-offset-4 text-center">
+                <a href="mailto:{{ site.email }}">
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <!-- <p>{{ site.email }}</p> -->
+                    <p>Courriel</p>
+                </a>
+            </div>
+            <div class="col-lg-2 col-lg-offset-0 text-center">
+                <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
+                    <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p>{{ site.twitter_username }}</p>
+                </a>
+            </div>
+         </div>
       <!-- Add footer here -->
       <p class="text-muted text-center">&copy; 20{{ site.time | date: '%y' }} {{ site.copyright }}</p>
     </div>
