--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href='https://dario.com'>English</a>
+                    <a href="{{ site.english_url }}">English</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#services">Services</a>
