--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,8 +1,8 @@
-<section id="contact">
+<section class="contact-padding" id="contact">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Agissez dès à présent!</h2>
+                <h2 class="section-heading">Agissez dès à présent !</h2>
                 <hr class="primary">
                 <p>Envoyez-nous un courriel et entreprenons ensemble la sécurisation de votre entreprise.</p>
             </div>
@@ -29,6 +29,7 @@
             </div>
          </div>
       <!-- Add footer here -->
-      <p class="text-muted text-center">&copy; 20{{ site.time | date: '%y' }} {{ site.copyright }}</p>
+      <p class="text-muted text-center sp">&copy; 20{{ site.time | date: '%y' }} {{ site.copyright }} <br> Attributions d'images :
+      <a href=https://pixabay.com/en/shredder-mechanically-device-1014201/ target="_blank" >shredder</a> </p>
     </div>
 </section>
