--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,14 +22,15 @@
                 </a>
             </div>
             <div class="col-lg-2 col-lg-offset-0 text-center">
-                <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
+                <a href="https://twitter.com/{{ site.twitter_username }}" rel="nofollow noopener noreferrer" target="_blank">
                     <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>{{ site.twitter_username }}</p>
+                    <!-- <p>{{ site.twitter_username }}</p> -->
+                    <p>Twitter</p>
                 </a>
             </div>
          </div>
       <!-- Add footer here -->
       <p class="text-muted text-center sp">&copy; 20{{ site.time | date: '%y' }} {{ site.copyright }} <br> Attributions d'images :
-      <a href=https://pixabay.com/en/shredder-mechanically-device-1014201/ target="_blank" >shredder</a> </p>
+      <a href=https://pixabay.com/en/shredder-mechanically-device-1014201/ rel="nofollow noopener noreferrer" target="_blank" >shredder</a> </p>
     </div>
 </section>
