--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="img/portfolio/allianz-protect.pdf" rel="nofollow" target="_blank" class="portfolio-box">
+                <a href="img/portfolio/allianz-protect.pdf" rel="nofollow noopener noreferrer" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/Allianz-Protect.jpg" class="img-responsive" alt="AMOA sécurité et vie privée Coffre-fort Allianz Protect">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="http://europa.eu/rapid/press-release_IP-96-993_fr.htm" rel="nofollow" target="_blank" class="portfolio-box">
+                <a href="http://europa.eu/rapid/press-release_IP-96-993_fr.htm" rel="nofollow noopener noreferrer" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/EC.jpg" class="img-responsive" alt="Audit et analyse des risques et sécurité">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -47,7 +47,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" rel="nofollow" target="_blank" class="portfolio-box">
+                <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" rel="nofollow noopener noreferrer" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/Voyages-sncf.jpg" class="img-responsive" alt="AMOA Conformité CNIL sécurité et vie privée">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -77,7 +77,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" rel="nofollow" target="_blank" class="portfolio-box">
+                <a href="https://www.cnil.fr/fr/comprendre-vos-obligations/les-principes-cles" rel="nofollow noopener noreferrer" target="_blank" class="portfolio-box">
                     <img src="img/portfolio/EDF.jpg" class="img-responsive" alt="AMOA Conformité CNIL sécurité et vie privée">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
