--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@
 // }
 
 // variables.less original $theme-primary: #F05F40;
-$theme-primary: #6C819E;
+$theme-primary: #5478C4;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
