--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">La sécurité est une exigence commerciale</h2>
                 <hr class="light">
-                <p class="text-faded">Nous réduisons vos risques pour la sécurité et la confidentialité des informations, vous assurant que vos données vitales sont protégées.</p>
+                <p class="text-faded">Nous réduisons vos risques de sécurité et confidentialité des données, vous assurant que vos données vitales sont protégées.</p>
                 <a href="#contact" class="btn btn-default btn-xl wow tada page-scroll">Contactez-Nous</a>
             </div>
         </div>
