--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,20 +39,21 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="{{ site.twitter_username }}" />
-    <meta name="twitter:title" content="{{ site.title }}" />
     <meta name="twitter:description" content="{{ site.description }}" />
     <meta name="twitter:creator" content="{{ site.author }}" />
     <meta name="twitter:image" content="{{ site.url }}/img/chklst.png" />
-
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="{{ site.title }}" />
-    <meta property="og:url" content="{{ site.url }}" />
+    <meta name="twitter:title" content="{{ site.title }}" />
+    <meta property="og:type" content="website" />    test
+    <meta property="og:title" content="{{ site.title }}" />   no
+    <meta property="og:url" content="{{ site.url }}" />     no
     <meta property="og:image:secure_url" content="{{ site.url }}/img/chklst.png" />
-    <meta property="og:description" content="{{ site.description }}" />
-    <meta property="og:site_name" content="{{ site.title }}" />
+    <meta property="og:description" content="{{ site.description }}" />  no
+    <meta property="og:site_name" content="{{ site.title }}" />    no
     -->
+    <meta name="twitter:image" content="{{ site.url }}/img/chklst.png" />
+    <meta property="og:image:secure_url" content="{{ site.url }}/img/chklst.png" />
 
     <!-- entry for Jekyll plugin to generate SEO -->
     {% seo title=false %}
-    
+
 </head>
