--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
     <!-- Theme Color for Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#5478c4">
 
+    <meta name="robots" content="index, follow">
+
     <link rel="apple-touch-icon" href="{{ site.url }}/img/chklst.png">
     <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.url }}/favicon.ico">
     <link rel="icon" href="{{ site.url }}/favicon.ico" type="image/x-icon" />
@@ -51,6 +53,8 @@
     <meta property="og:site_name" content="{{ site.title }}" />    no
     -->
     <meta name="twitter:image" content="{{ site.url }}/img/chklst.png" />
+    <meta name="twitter:title" content="{{ site.title }}"/>
+    <meta name="twitter:description" content="{{ site.description }}"/>
     <meta property="og:image:secure_url" content="{{ site.url }}/img/chklst.png" />
 
     <!-- entry for Jekyll plugin to generate SEO -->
