--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,6 +56,7 @@
     <meta name="twitter:title" content="{{ site.title }}"/>
     <meta name="twitter:description" content="{{ site.description }}"/>
     <meta property="og:image:secure_url" content="{{ site.url }}/img/chklst.png" />
+    <meta property="og:type" content="website" />
 
     <!-- entry for Jekyll plugin to generate SEO -->
     {% seo title=false %}
